--- a/pom.xml
+++ b/pom.xml
@@ -3,25 +3,48 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>org.mule.transports</groupId>
-	<artifactId>mule-transport-ejb3</artifactId>
+	<groupId>@maven.group.id@</groupId>
+	<artifactId>@maven.artifact.id@</artifactId>
+	<name>@maven.name@</name>
+	<description>@maven.description@</description>
 	<packaging>jar</packaging>
-	<version>1.0</version>
+	<version>1.0-SNAPSHOT</version>
 	<properties>
 		<muleVersion>1.4.1</muleVersion>
+		<shortId>@maven.short.id@</shortId>
+		<domainName>@domain.name@</domainName>
 	</properties>
+	<issueManagement>
+		<system>Jira</system>
+		<url>http://mule.mulesource.org/jira/browse/${shortId}</url>
+	</issueManagement>
+	<scm>
+		<connection>
+			scm:svn:http://svn.muleforge.org/${domainName}/
+		</connection>
+		<developerConnection>
+			scm:svn:https://svn.muleforge.org/${domainName}/
+		</developerConnection>
+		<tag>HEAD</tag>
+		<url>http://svn.${domainName}.muleforge.org/</url>
+	</scm>
+	<ciManagement>
+		<system>Bamboo</system>
+		<url>http://bamboo.muleforge.org/browse/${shortId}</url>
+		<notifiers />
+	</ciManagement>
 	<distributionManagement>
 		<repository>
 			<id>muleforge.webdav.releases</id>
-			<url>dav:https://dav.muleforge.org/repository/${artifactId}/</url>
+			<url>dav:https://dav.muleforge.org/repository/${domainName}/</url>
 		</repository>
 		<snapshotRepository>
 			<id>muleforge.webdav.snapshots</id>
-			<url>dav:https://dav.muleforge.org/snapshots.repository/${artifactId}/</url>
+			<url>dav:https://dav.muleforge.org/snapshots.repository/${domainName}/</url>
 		</snapshotRepository>
 		<site>
 			<id>muleforge.webdav.sites</id>
-			<url>dav:https://dav.muleforge.org/${artifactId}/</url>
+			<url>dav:https://dav.muleforge.org/${domainName}/</url>
 		</site>
 	</distributionManagement>
 	<build>
@@ -45,9 +68,99 @@
 			</plugin>
 		</plugins>
 	</build>
-	<name>EJB 3.0</name>
-	<description>EJB 3.0 Transport</description>
+	<reporting>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-report-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-checkstyle-plugin</artifactId>
+				<configuration>
+					<configLocation>
+						http://www.muleforge.org/download/checkstyle.xml?version=1
+					</configLocation>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-pmd-plugin</artifactId>
+				<configuration>
+					<targetJdk>1.5</targetJdk>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>cobertura-maven-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>taglist-maven-plugin</artifactId>
+				<configuration>
+					<tags>
+						<tag>TODO</tag>
+						<tag>@todo</tag>
+						<tag>FIXME</tag>
+						<tag>@fixme</tag>
+						<tag>@deprecated</tag>
+					</tags>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jxr-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<configuration>
+					<links>
+						<link>
+							http://java.sun.com/j2ee/1.4/docs/api
+						</link>
+						<link>
+							http://java.sun.com/j2se/1.4.2/docs/api
+						</link>
+						<link>
+							http://java.sun.com/j2se/1.5.0/docs/api
+						</link>
+					</links>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>jdepend-maven-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>findbugs-maven-plugin</artifactId>
+				<!-- configuration>
+					<threshold>Low</threshold>
+					<effort>Max</effort>
+				</configuration -->
+			</plugin>
+		</plugins>
+	</reporting>
 	<dependencies>
+		<!-- Mule Dependencies -->
+		<dependency>
+			<groupId>org.mule</groupId>
+			<artifactId>mule-core</artifactId>
+			<version>${muleVersion}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.mule.modules</groupId>
+			<artifactId>mule-module-client</artifactId>
+			<version>${muleVersion}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.mule.tests</groupId>
+			<artifactId>mule-tests-functional</artifactId>
+			<version>${muleVersion}</version>
+			<scope>test</scope>
+		</dependency>
+	<!-- Mule Transport Dependencies -->
 		<dependency>
 			<groupId>org.mule.transports</groupId>
 			<artifactId>mule-transport-vm</artifactId>
@@ -68,22 +181,5 @@
 			<artifactId>mule-transport-stream</artifactId>
 			<version>${muleVersion}</version>
 		</dependency>
-		<dependency>
-			<groupId>org.mule.modules</groupId>
-			<artifactId>mule-module-client</artifactId>
-			<version>${muleVersion}</version>
-		</dependency>
-                <dependency>
-                        <groupId>org.mule</groupId>
-                        <artifactId>mule-core</artifactId>
-		        <version>${muleVersion}</version>
-                </dependency>
-                <dependency>
-                        <groupId>org.mule.tests</groupId>
-                        <artifactId>mule-tests-functional</artifactId>
-		        <version>${muleVersion}</version>
-                        <scope>test</scope>
-                </dependency>
 	</dependencies>
-	
-</project>
+</project>		
