EJBTHREE-1 - initial commit of existing code

--- a/src/main/resources/META-INF/services/org/mule/providers/ejb3.properties
+++ b/src/main/resources/META-INF/services/org/mule/providers/ejb3.properties
@@ -18,7 +18,7 @@ dispatcher.factory=org.mule.providers.ejb3.Ejb3MessageDispatcherFactory
 message.receiver=org.mule.providers.ejb3.Ejb3MessageReceiver
 
 #The message receiver to use if the endpoint is marked as transacted.
-transacted.message.receiver=org.mule.providers.ejb3.Ejb3TransactedMessageReceiver
+transacted.message.receiver=
 
 
 #Defines the way in which endpoints for your transport will be constructed
