--- a/pom.xml
+++ b/pom.xml
@@ -181,5 +181,10 @@
 			<artifactId>mule-transport-stream</artifactId>
 			<version>${muleVersion}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.mule.transports</groupId>
+			<artifactId>mule-transport-rmi</artifactId>
+			<version>${muleVersion}</version>
+		</dependency>
 	</dependencies>
 </project>		
